[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/dialogue/base/base_dialogue_branch_script.gd" type="Script" id=1]

[node name="dialogue_branch" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="dialogue_background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -188.0
margin_right = 292.0
margin_bottom = -38.0
color = Color( 0, 0, 0, 1 )

[node name="dialogue_text" type="RichTextLabel" parent="dialogue_background"]
margin_left = 22.0
margin_top = 13.0
margin_right = 562.0
margin_bottom = 137.0
visible_characters = 0
percent_visible = 0.0
text = "Hello there buddy!"

[node name="selectable_options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 78.0
margin_top = -358.0
margin_right = 291.0
margin_bottom = -200.0
